Name:           JsonGrammar
Version:        1.0.2
Synopsis:       Combinators for bidirectional JSON parsing
Description:   	Combinators for bidirectional JSON parsing


Author:         Martijn van Steenbergen
Maintainer:     martijn@van.steenbergen.nl
Stability:      Experimental
Copyright:      Some Rights Reserved (CC) 2010-2014 Martijn van Steenbergen
Homepage:       https://github.com/MedeaMelana/JsonGrammar2
Bug-reports:    https://github.com/MedeaMelana/JsonGrammar2/issues


Cabal-Version:  >= 1.8
License:        BSD3
License-file:   LICENSE
Category:       JSON, Language
Build-type:     Simple


Source-Repository head
  Type:         git
  Location:     https://github.com/MedeaMelana/JsonGrammar2

Library
  Hs-Source-Dirs:   src
  Exposed-Modules:  Language.JsonGrammar
  Other-Modules:    Language.JsonGrammar.Grammar,
                    Language.JsonGrammar.Parser,
                    Language.JsonGrammar.TypeScript,
                    Language.JsonGrammar.Serializer,
                    Language.JsonGrammar.Util
  Build-Depends:    base >= 3.0 && < 5,
                    aeson >= 0.9 && < 0.10,
                    semigroups >= 0.5 && < 0.17,
                    language-typescript >= 0.0.4 && < 0.1,
                    mtl >= 2.1 && < 2.3,
                    stack-prism >= 0.1 && < 0.2,
                    -- constraints copied from aeson-0.6.1.0:
                    attoparsec >= 0.8.6.1,
                    bytestring,
                    containers,
                    hashable >= 1.1.2.0,
                    text >= 0.11.0.2,
                    template-haskell >= 2.4,
                    time,
                    unordered-containers >= 0.1.3.0,
                    vector >= 0.7.1

Test-Suite tests
  Type:             exitcode-stdio-1.0
  Hs-Source-Dirs:   tests
  Main-Is:          Tests.hs
  Other-Modules:    Types
  Build-Depends:    JsonGrammar,
                    stack-prism >= 0.1 && < 0.2,
                    base >= 3.0 && < 5,
                    aeson >= 0.6 && < 0.10,
                    language-typescript >= 0.0.4 && < 0.1,
                    text >= 0.11.0.2,
                    test-framework >= 0.8 && < 0.9,
                    test-framework-hunit >= 0.3 && < 0.4,
                    HUnit >= 1.2 && < 1.3
