Name:           JsonGrammar
Version:        1.0.5
Synopsis:       Combinators for bidirectional JSON parsing
Description:   	Combinators for bidirectional JSON parsing


Author:         Martijn van Steenbergen
Maintainer:     martijn@van.steenbergen.nl
Stability:      Experimental
Category:       JSON, Language
License:        BSD3
License-file:   LICENSE
Copyright:      Some Rights Reserved (CC) 2010-2015 Martijn van Steenbergen
Homepage:       https://github.com/MedeaMelana/JsonGrammar2
Bug-reports:    https://github.com/MedeaMelana/JsonGrammar2/issues


Cabal-Version:  >= 1.8
Tested-With:    GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.1
Build-type:     Simple


Source-Repository head
  Type:         git
  Location:     https://github.com/MedeaMelana/JsonGrammar2

Library
  Hs-Source-Dirs:   src
  Exposed-Modules:  Language.JsonGrammar
  Other-Modules:    Language.JsonGrammar.Grammar,
                    Language.JsonGrammar.Parser,
                    Language.JsonGrammar.TypeScript,
                    Language.JsonGrammar.Serializer,
                    Language.JsonGrammar.Util
  Build-Depends:    base >= 3.0 && < 5,
                    aeson >= 0.9 && < 1.1,
                    language-typescript >= 0.0.4 && < 0.1,
                    mtl >= 2.1 && < 2.3,
                    stack-prism >= 0.1 && < 0.2,
                    -- constraints copied from aeson-1.0.1.0:
                    attoparsec >= 0.13.0.1,
                    bytestring >= 0.10.4,
                    containers >= 0.2.4.1,
                    text >= 1.1.1.0,
                    unordered-containers >= 0.2.5.0,
                    vector >= 0.8

Test-Suite tests
  Type:             exitcode-stdio-1.0
  Hs-Source-Dirs:   tests
  Main-Is:          Tests.hs
  Other-Modules:    Types
  Build-Depends:    JsonGrammar,
                    stack-prism >= 0.1 && < 0.2,
                    base >= 3.0 && < 5,
                    aeson >= 0.9 && < 1.1,
                    language-typescript >= 0.0.4 && < 0.1,
                    -- constraints copied from aeson-1.0.1.0:
                    text,
                    test-framework,
                    test-framework-hunit,
                    HUnit
